--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -12,6 +12,8 @@
     <string name="quick_settings_tiles_default" translatable="false">
         wifi,bt,inversion,cell,airplane,rotation,flashlight,location,cast,hotspot
     </string>
-    
+    <!-- Whether recents should use hardware layers for its taskviews. This flag can be enabled
+    for devices where the java drawing of round rects may be slow -->
+    <bool name="config_recents_use_hardware_layers">true</bool>
 </resources>
 
